# Estate

./: .gitignore  AUTHORS  Makefile.am  Makefile_Estate_Helper.am  README.md  autogen.sh  configure.ac  tcp.est
data/: test.est
doc/: Doxyfile.in  Makefile.am  estate_ref.dox  examples.dox
m4/: efl.m4
pc/: estate.pc.in
src/: Makefile.am
src/benchmarks/: Makefile.am  bench.c  bench.est
src/examples/: Makefile.am  estate_parser.c  estate_parser.est  hello.c  hello.est  reentrant.c  reentrant.est  turnstile.c  turnstile.est
src/lib/: Estate.h  Makefile.am  estate_machine.c  estate_main.c  estate_mempool.c  estate_misc.c  estate_private.h  estate_state.c  estate_transition.c
src/tests/: Makefile.am  estate_lib.c  estate_main.c  estate_suite.c  estate_suite.h
